Fix spacing of desktop layout nav

--- a/src/styles.css
+++ b/src/styles.css
@@ -205,7 +205,7 @@ header {
   .desktop-nav div {
     display: flex;
     align-items: center;
-    padding: 0 2rem;
+    padding: 0 .6rem;
   }
 
   .desktop-nav div a {
